# NonEuclideanRenderingEngine-nere

./: .gitignore  CMakeLists.txt  Pixel.hpp  first_app.cpp  first_app.hpp  main.cpp  nere_device.cpp  nere_device.hpp  nere_model.cpp  nere_model.hpp  nere_pipeline.cpp  nere_pipeline.hpp  nere_swap_chain.cpp  nere_swap_chain.hpp  nere_window.cpp  nere_window.hpp  run.sh  user_interface.cpp  user_interface.hpp  user_settings.hpp  vulkan_initializers.hpp
NonEuclideanRenderingEngine-nere.xcodeproj/: project.pbxproj
NonEuclideanRenderingEngine-nere.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
NonEuclideanRenderingEngine-nere.xcodeproj/xcshareddata/xcschemes/: NonEuclideanRenderingEngine-nere.xcscheme
NonEuclideanRenderingEngine-nere.xcodeproj/xcuserdata/kobihall.xcuserdatad/xcschemes/: xcschememanagement.plist
shaders/: computeScreen.frag  computeScreen.vert  shader.comp  shader.frag
